package pizzas;

public class FourCheesesPizza extends Pizza {
    public FourCheesesPizza() {
        this.name = "4 cheeses";
        this.toppings.add("Cheese #1");
        this.toppings.add("Cheese #2");
        this.toppings.add("Cheese #3");
        this.toppings.add("Cheese #4");
    }
}
