package pizzas;

public class HawaiiPizza extends Pizza {
    public HawaiiPizza() {
        this.name = "Hawaii";
        this.toppings.add("Chicken");
        this.toppings.add("Pineapple");
    }
}
