@startuml

title __TP3's Class Diagram__\n

  namespace pizzas {
    class pizzas.FourCheesesPizza {
    }
  }
  

  namespace pizzas {
    class pizzas.HawaiiPizza {
    }
  }
  

  namespace pizzas {
    class pizzas.InnopolisPizza {
    }
  }
  

  namespace pizzas {
    abstract class pizzas.Pizza {
    }
  }
  

  namespace pizzas {
    abstract class pizzas.Pizzeria {
    }
  }
  

  namespace pizzas {
    class pizzas.PizzeriaJimmy {
    }
  }
  

  namespace pizzas {
    class pizzas.PizzeriaRobby {
    }
  }
  

  namespace tests {
    class tests.Tests {
    }
  }
  

  pizzas.FourCheesesPizza -up-|> pizzas.Pizza
  pizzas.HawaiiPizza -up-|> pizzas.Pizza
  pizzas.InnopolisPizza -up-|> pizzas.Pizza
  pizzas.PizzeriaJimmy -up-|> pizzas.Pizzeria
  pizzas.PizzeriaRobby -up-|> pizzas.Pizzeria


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
